Revert "start reservations app"
This reverts commit 341f7d6067f9beb5a93793e0045a29f3102a0faa.
